--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "particles.ts": "^0.0.1",
     "react": "^16.13.1",
@@ -25,6 +27,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0"
   },
   "scripts": {
