--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
+    "formik": "^2.2.1",
     "node-sass": "^4.14.1",
     "particles.ts": "^0.0.1",
     "react": "^16.13.1",
