--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
+    "antd": "^4.8.0",
     "axios": "^0.20.0",
     "formik": "^2.2.1",
     "node-sass": "^4.14.1",
